# pico_mcu_server

./: .gitignore  CMakeLists.txt  test_movements.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_server.yml
docker/: Dockerfile  dev.dockerfile  test.dockerfile
include/: axis_config.hpp  pico_axis_controller.hpp  pico_axis_controller_config.hpp  pico_data_sender.hpp  pico_delay.hpp  pico_gpi.hpp  pico_mcu_server_types.hpp  pico_stepper_motor.hpp  pico_uart.hpp
ipc/: CMakeLists.txt
ipc/include/: pico_ipc_connection.hpp  pico_synchronous_ipc_connection.hpp
ipc/src/: pico_ipc_connection.cpp  pico_synchronous_ipc_connection.cpp
ipc/tests/: CMakeLists.txt
ipc/tests/src/: ut_pico_ipc_connection.cpp
platform/: CMakeLists.txt
platform/include/: pico_data_sender.hpp  pico_delay.hpp  pico_gpi.hpp  pico_gpo.hpp  pico_mcu_platform.hpp  pico_stepper_motor.hpp  pico_uart.hpp  pico_uart_receiver.hpp
platform/src/: pico_stepper_motor.cpp  pico_uart.cpp
platform/tests/: CMakeLists.txt
platform/tests/src/: ut_pico_gpi.cpp  ut_pico_gpi_gpo.cpp  ut_pico_mcu_platform.cpp  ut_pico_stepper_motor.cpp  ut_pico_uart.cpp  ut_pico_uart_receiver.cpp
proto/: CMakeLists.txt
proto/include/: movement_proto_api_request_parser.hpp  movement_proto_api_response_serializer.hpp
proto/resourses/: movement_vendor_api.proto
proto/tests/: CMakeLists.txt
proto/tests/src/: ut_movement_proto_api_request_parser.cpp
src/: pico_mcu_server.cpp  pico_stepper_motor_server.cpp  ssd1306.h
uart_proxy/: Dockerfile  http_proxy_handler.py  http_proxy_server.py  http_request_handler.py  uart_proxy.py  uart_proxy_handler.py  uart_request_handler.py
